Fixed contrast accessibility issues

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 .App h1 {
   font-family: "Lexend Deca", sans-serif;
   font-weight: 600;
-  color: #709CCE;
+  color: #143A92;
   text-align: left;
   font-size: 5em;
 }
